# IPOstudy

./: .env.example  .gitignore  README.md  brainstorm-result.md  guava_guide.md  plan.md  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260214_01_init_schema.py  20260214_02_quality_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/connectors/: __init__.py  dart_connector.py  http_client.py  kind_connector.py  krx_connector.py
backend/app/core/: config.py
backend/app/db/: session.py  url.py
backend/app/etl/: __init__.py  normalize.py  pipeline.py  raw_ingest.py  reconcile.py
backend/app/jobs/: celery_app.py  schedules.py  tasks.py
backend/app/models/: __init__.py  corp.py  disclosure.py  ipo.py  quality.py  snapshot.py
backend/app/quality/: __init__.py  catalog.py  engine.py  gate.py  types.py
backend/app/schemas/: __init__.py  dart.py  snapshot.py
backend/app/services/: dataset_registry_service.py  export_service.py  insight_service.py  ipo_service.py  quality_log_service.py  quality_summary_service.py  snapshot_service.py  source_status_service.py
backend/scripts/: krx_openapi_probe.py  run_pipeline_once.py
backend/tests/: conftest.py  test_quality_schema_tables.py  test_schema_tables.py
backend/tests/api/: test_company_api.py  test_export_api.py  test_insights_api.py  test_ipo_api.py  test_quality_api.py  test_quality_api_docs.py
backend/tests/connectors/: test_dart_connector.py  test_kind_connector.py  test_krx_connector.py
(+83 files in other folders)
